# spall

./: .buildinfo  .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.rst  genindex.html  index.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  readme.html  searchindex.js  sitemap.xml  spall.html  whitelist.py
.github/workflows/: build.yaml  ci.yml  codeql-analysis.yml
_modules/: index.html
_modules/spall/: _subprocess.html  exceptions.html
docs/: conf.py  index.rst  requirements.txt  spall.rst
spall/: __init__.py  _subprocess.py  _version.py  exceptions.py
tests/: TESTS.md  __init__.py  _test.py  _utils.py  conftest.py
