[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = ["whitelist.py", "spall/__main__.py"]

[tool.poetry]
authors = ["jshwi <stephen@jshwisolutions.com>"]
description = "Object-oriented commandline"
license = "MIT"
name = "spall"
readme = "README.rst"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
ipython = "^8.2.0"
pyaud = "^3.13.3"
pytest = "^7.1.2"
pytest-randomly = "^3.11.0"
restview = "^3.0.0"
toml-sort = "^0.20.0"

[tool.pyaud.audit]
modules = [
    "files",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "coverage",
    "docs",
]

[tool.pyaud.logging.root.debug]
level = "DEBUG"

[tool.pyaud.packages]
exclude = []
name = "spall"

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = ["docs", "*.egg-info", ".git", ".mypy_cache", ".idea", "prof"]
